--- a/machine.html
+++ b/machine.html
@@ -123,7 +123,7 @@
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/fahrenheitgroup/job/midwkcaoesqc788akmx1eituqr'>Machine Learning Research Fellow - VSU | The Fahrenheit Group</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/fahrenheitgroup/job/midwkcaoesqc788akmx1eituqr'>Machine Learning Research Fellow - VSU | The Fahrenheit Group</a></h5> 
 <p><span class="badge badge-light">Richmond, VA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -205,7 +205,7 @@ Deep Learning (Linear, CNN, GRU, LSTM, Attention, Transformer), etc.</p>
 <p><span class="badge badge-light">Cluj-Napoca, Romania</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1933414'>Job Application for Senior Machine Learning Engineer at Sony Interactive Entertainment PlayStation</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1933414'>Job Application for Senior Machine Learning Engineer at Sony Interactive Entertainment PlayStation</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -229,7 +229,7 @@ Deep Learning (Linear, CNN, GRU, LSTM, Attention, Transformer), etc.</p>
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/agoda/jobs/1918844'>Job Application for Senior Machine Learning Engineer, Data Platform at Agoda</a></h5> 
+<h5><a href='https://boards.greenhouse.io/agoda/jobs/1918844'>Job Application for Senior Machine Learning Engineer, Data Platform at Agoda</a></h5> 
 <p><span class="badge badge-light">Bangkok Thailand?  Thailand</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -241,7 +241,7 @@ Deep Learning (Linear, CNN, GRU, LSTM, Attention, Transformer), etc.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/irisautomation/jobs/4481264002?gh_src=34a6a6242'>Job Application for Deep Learning/Machine Learning Research ...</a></h5> 
+<h5><a href='https://boards.greenhouse.io/irisautomation/jobs/4481264002?gh_src=34a6a6242'>Job Application for Deep Learning/Machine Learning Research ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 15, 2019 ... As either the Deep Learning Engineer or ML Research Engineer, you will be at 
 the center of our core mission, building state of the art technologies. You will be?...</p>
@@ -265,13 +265,13 @@ Engineer to join the Cityblock Prototype Engineering team. You will work with?..
 <p><span class="badge badge-light">Campbell Campbell</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/sensynehealth/j/6358903D5A/'>Machine Learning Researcher - Sensyne Health</a></h5> 
+<h5><a href='https://apply.workable.com/sensynehealth/j/6358903D5A/'>Machine Learning Researcher - Sensyne Health</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>14 hours ago ... Hands-on experience using one of the following deep learning libraries: 
 Tensorflow, PyTorch, Theano or similar. Experience of analysing clinical/
 healthcare?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/ocadotechnology/jobs/4353456002'>Job Application for Machine Learning Engineer at Ocado Group</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/ocadotechnology/jobs/4353456002'>Job Application for Machine Learning Engineer at Ocado Group</a></h5> 
 <p><span class="badge badge-light">Wroclaw</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -293,7 +293,7 @@ healthcare?...</p>
 <p><span class="badge badge-light">Montreal, Canada  Montreal</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/optimusride/cb2790e0-9b59-4ae0-b018-5ec4a08ea923'>Optimus Ride - Software Engineer - Machine Learning</a></h5> 
+<h5><a href='https://jobs.lever.co/optimusride/cb2790e0-9b59-4ae0-b018-5ec4a08ea923'>Optimus Ride - Software Engineer - Machine Learning</a></h5> 
 <p><span class="badge badge-light">Boston, MA  Boston</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -435,7 +435,7 @@ time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697742728-abschlussarbeit-automatisiertes-machine-learning'>Bosch Group Abschlussarbeit Automatisiertes Machine Learning | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697742728-abschlussarbeit-automatisiertes-machine-learning'>Bosch Group Abschlussarbeit Automatisiertes Machine Learning | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -451,7 +451,7 @@ time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that
 <p><span class="badge badge-light">Sunnyvale  ?  Sunnyvale, CA</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/mercycorps/job/oMunbfwy'>Mercy Corps Careers - Consultant  - Software Engineering for Android Flutter App with Firebase ML Kit and Machine Learning Experience - Remote</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/mercycorps/job/oMunbfwy'>Mercy Corps Careers - Consultant  - Software Engineering for Android Flutter App with Firebase ML Kit and Machine Learning Experience - Remote</a></h5> 
 <p><span class="badge badge-light">Lagos, Nigeria</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
